[package]
name = "arp-ebpf"
version = "0.2.0"
edition = "2021"

[dependencies]
aya-ebpf = "0.2"
aya-log-ebpf = "0.2"
arp-common = { path = "../arp-common" }
network-types = "0.0.7"

[[bin]]
name = "arp"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[workspace]
members = []
