[package]
name = "arp"
version = "0.2.0"
edition = "2021"
publish = false

[dependencies]
aya = "0.14"
aya-log = "0.3"
clap = { workspace = true }
arp-common = { path = "../arp-common", features = ["user"] }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"

[dev-dependencies]
pretty_assertions = "1"

[[bin]]
name = "arp"
path = "src/main.rs"
